--- a/public/css/service.css
+++ b/public/css/service.css
@@ -248,6 +248,37 @@
   }
 }
 
+.item_service {
+  border: 1px solid #3e3e3e;
+  padding: 20px;
+}
+
+.item_service__image {
+  margin-top: 20px;
+  border: 1px solid #3e3e3e;
+  background: no-repeat center / contain;
+  height: 150px;
+}
+
+.item_service__image--first {
+  height: 400px;
+}
+
+@media all and (max-width: 768px) {
+  .item_service__image {
+    height: 100px;
+  }
+  .item_service__image--first {
+    height: 285px;
+  }
+}
+
+@media all and (max-width: 576px) {
+  .item_service__image {
+    height: 120px;
+  }
+}
+
 .content-main {
   position: relative;
   padding: 40px;
@@ -470,6 +501,29 @@
 
 @media all and (max-width: 576px) {
   .portfolio {
+    display: block;
+  }
+}
+
+.service {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.service__col--first {
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
+@media all and (max-width: 992px) {
+  .service {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media all and (max-width: 576px) {
+  .service {
     display: block;
   }
 }
