--- a/public/css/index.css
+++ b/public/css/index.css
@@ -225,6 +225,7 @@
 }
 
 .item_service__image {
+  margin-top: 20px;
   border: 1px solid #3e3e3e;
   background: no-repeat center / contain;
   height: 150px;
