--- a/src/component/service.scss
+++ b/src/component/service.scss
@@ -3,6 +3,7 @@
 @import "item/item";
 @import "item/item_advantage";
 @import "item/item_price";
+@import "item/item_service";
 
 @import "content/content-main";
 @import "content/content-compare";
@@ -10,5 +11,6 @@
 @import "content/content-form";
 
 @import "portfolio/portfolio";
+@import "service/service";
 
 @import "modal/modal_portfolio";
