--- a/src/logo.pug
+++ b/src/logo.pug
@@ -73,6 +73,98 @@ html(lang="ru")
                     +portfolio-link("javascript:;", "#portfolio-start", "/demo/demo-preview.jpg", "Коучинг IFC стандарта", "Логотип «Старт»")
                     +portfolio-link("javascript:;", "#portfolio-guideline", "/demo/demo-preview.jpg", "Школа флористики", "Логотип «Гайдлайн»")
                     +portfolio-link("javascript:;", "#portfolio-full", "/demo/demo-preview.jpg", "Эстетическая медицина", "Логотип «Full»")
+                //- Compare
+                .content-compare
+                    .row.justify-content-between
+                        .col-3.col-md-12.col-xs-12.mb-md-3
+                            .content-compare__image(style="background-image: url('../demo/prototype-line.png');")
+                        .col-8.col-lg-9.col-md-12
+                            .row.mb-3
+                                .col-6.col-sm-5.col-xs-12.mb-xs-2
+                                    h3 Как найти идеальное решение?
+                                .col-6.col-sm-7.col-xs-12
+                                    p Вам нужен логотип, но вы не знаете, какой тарифрый план для вас наиболее подходящий? 
+                                        | Вот простое пояснение, какие возможности даст вам тариф.
+                            .row
+                                .col-4.mb-2
+                                    .item.item_advantage
+                                        svg.item__icon.item_advantage__positive(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve")
+                                            path(d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z")
+                                        .item_advantage__title «Старт»<br/>срок от 7 дней
+                                        .item__intro.mt-2.mb-2 У&nbsp;вас небольшой бюджет, но&nbsp;вы хотите получить 
+                                            | конкурентоспособный результат, а&nbsp;не&nbsp;просто симпатичную картинку? Доверьтесь нам.
+                                        .item__label минипрезентация
+                                        .item__label 1 эскиз
+                                        .item__label логобук
+                                .col-4.mb-2
+                                    .item.item_advantage
+                                        svg.item__icon.item_advantage__positive(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve")
+                                            path(d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z")
+                                        svg.item__icon.item_advantage__positive(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve")
+                                            path(d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z")
+                                        .item_advantage__title «Старт»<br/>срок от 7 дней
+                                        .item__intro.mt-2.mb-2 У&nbsp;вас небольшой бюджет, но&nbsp;вы хотите получить 
+                                            | конкурентоспособный результат, а&nbsp;не&nbsp;просто симпатичную картинку? Доверьтесь нам.
+                                        .item__label минипрезентация
+                                        .item__label 1 эскиз
+                                        .item__label логобук
+                                .col-4.mb-2
+                                    .item.item_advantage
+                                        svg.item__icon.item_advantage__positive(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve")
+                                            path(d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z")
+                                        svg.item__icon.item_advantage__positive(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve")
+                                            path(d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z")
+                                        svg.item__icon.item_advantage__positive(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve")
+                                            path(d="M87.6,16c-4.7-5-11.2-7.9-18-7.9c-6.8,0-13.4,2.9-18,7.9L50,17.7L48.4,16c-9.3-10-24.8-10.5-34.8-1.3    c-0.4,0.4-0.9,0.8-1.3,1.3c-9.8,10.6-9.8,26.9,0,37.5l35.3,37.2c1.2,1.3,3.3,1.3,4.5,0.1c0,0,0.1-0.1,0.1-0.1l35.3-37.2    C97.5,43,97.5,26.6,87.6,16z")
+                                        .item_advantage__title «Старт»<br/>срок от 7 дней
+                                        .item__intro.mt-2.mb-2 У&nbsp;вас небольшой бюджет, но&nbsp;вы хотите получить 
+                                            | конкурентоспособный результат, а&nbsp;не&nbsp;просто симпатичную картинку? Доверьтесь нам.
+                                        .item__label минипрезентация
+                                        .item__label 1 эскиз
+                                        .item__label логобук
+                //- Motivation
+                .content-main.mt-5
+                    h4.content-main__title.content-main__title_secondary Разработка логотипа — это взаимопонимание и доверие. И мы 
+                        span.text-green делаем всё 
+                        | для комфортного сотрудничества.
+                    span.content-main__subtitle преимущества
+                    .row.justify-content-end.mt-3
+                        .col-4
+                            p.content-main__list описание логотипа
+                            p.content-main__list альтернативные версии лого
+                            p.content-main__list правила использования
+                            p.content-main__list рекомендации по размещению
+                        .col-4
+                            p.content-main__list описание логотипа 
+                                span.modal-info info
+                            p.content-main__list альтернативные версии лого
+                            p.content-main__list правила использования
+                            p.content-main__list рекомендации по размещению    
+                //- Steps
+                .row.mt-5.mt-sm-3
+                    .col-5.col-lg-10.col-sm-12
+                        P.h3.mb-0 Так выглядит 
+                            span.text-green результат 
+                            | работы над логотипом
+                .row.mt-2.align-items-end
+                    .col-8.col-lg-10.col-sm-12
+                        p Вы получите все исходные файлы в векторном формате, включая стилеобразующие элементы. PDF-руководство по использованию фирменного стиля. Оформим до 6 фирменных предметов, которые важны для вашего бренда.
+                .service.mt-3
+                    .item.item_service.service__col.service__col--first
+                        .item__title фирменные носители
+                        .item_service__image.item_service__image--first(style="background-image:url('/demo/fullstack.png')")
+                    .item.item_service.service__col.mt-xs-1
+                        .item__title правила использования
+                        .item_service__image(style="background-image:url('/demo/small.png')")
+                    .item.item_service.service__col.mt-xs-1
+                        .item__title фирменные шрифты
+                        .item_service__image(style="background-image:url('/demo/small.png')")
+                    .item.item_service.service__col.mt-xs-1
+                        .item__title цветовая палитра
+                        .item_service__image(style="background-image:url('/demo/small.png')")
+                    .item.item_service.service__col.mt-xs-1
+                        .item__title элементы фирменного стиля
+                        .item_service__image(style="background-image:url('/demo/small.png')")                
                 //- Price
                 .row.pt-2.pb-2.mt-5
                     .col-4.col-lg-8.col-md-10.col-sm-12.mb-lg-3.text-grey
@@ -97,33 +189,38 @@ html(lang="ru")
                                 p.item_price__title 15000
                                 .item_price__add +2000
                                 .item_price__add-intro за подготовку 1 макета полиграфии в печать
-                        .item.item_price.mb-2(data-fancybox="start" data-src="#start")
-                            .item_price__content
-                                p.item_price__title Старт
-                                p.item_price__intro Эконом-вариант разработки: вы получите 1 вариант логотипа 
-                                    | и логобук вместо гайдлайна. Меньше выбор, но так же красиво.
-                                .item_price__group
-                                    .item_price__label 1 эскиз
-                                    .item_price__label логобук
-                            .item_price__info
-                                p.item_price__title 6000
-                                .item_price__add +3000
-                                .item_price__add-intro за дополнительный эскиз
-                                .item_price__add +4000
-                                .item_price__add-intro за разработку гайдлайна
-                        .item.item_price(data-fancybox="full" data-src="#full")
-                            .item_price__content
-                                p.item_price__title Гайдлайн+
-                                p.item_price__intro В дополнение к основному тарифу подготовим до 4-ёх 
-                                    | файлов полиграфии в печати по тех. требованием типографии.
-                                .item_price__group
-                                    .item_price__label до 3 эскизов
-                                    .item_price__label видеопрезентация
-                                    .item_price__label гайдлайн
-                            .item_price__info
-                                p.item_price__title 21000
-                                .item_price__add +3000
-                                .item_price__add-intro за дополнительный эскиз
+                        .row 
+                            .col-6.col-lg-12.mt-2
+                                .item.item_price.mb-2(data-fancybox="start" data-src="#start")
+                                    .item_price__content
+                                        p.item_price__title Старт
+                                    .item_price__info
+                                        p.item_price__title 6000
+                                    .mt-2
+                                        p.item_price__intro Эконом-вариант разработки: вы получите 1 вариант логотипа 
+                                                | и логобук вместо гайдлайна. Меньше выбор, но так же красиво.
+                                        .item_price__group
+                                            .item_price__label 1 эскиз
+                                            .item_price__label логобук
+                                    .mt-2
+                                        .item_price__add +3000
+                                        .item_price__add-intro за дополнительный эскиз
+                            .col-6.col-lg-12.mt-2
+                                .item.item_price(data-fancybox="full" data-src="#full")
+                                    .item_price__content
+                                        p.item_price__title Гайдлайн+
+                                    .item_price__info
+                                            p.item_price__title 21000
+                                    .mt-2
+                                        p.item_price__intro В дополнение к основному тарифу подготовим до 4-ёх 
+                                            | файлов полиграфии в печати по тех. требованием типографии.
+                                        .item_price__group
+                                            .item_price__label до 3 эскизов
+                                            .item_price__label видеопрезентация
+                                            .item_price__label гайдлайн
+                                    .mt-2
+                                        .item_price__add +3000
+                                        .item_price__add-intro за дополнительный эскиз
                 //- Motivation
                 .content-main.mt-5
                     h4.content-main__title.content-main__title_secondary Сейчас мы простыми словами расскажем, в&nbsp;чём 
@@ -145,35 +242,16 @@ html(lang="ru")
                             p.content-main__list элементы фирменного стиля (шрифты, цветовая гамма, паттерны и т.д.)
                             p.content-main__list примеры использования логотипа на носителях
                             p.content-main__list рекомендации по использованию общего стиля
-                //- Steps
-                .row.mt-5.mt-sm-3
-                    .col-5.col-lg-10.col-sm-12
-                        P.h3.mb-0 Посмотрите как будет выглядеть готовый 
-                            span.text-green гайдлайн
-                .row.mt-2.align-items-end
-                    .col-8.col-lg-10.col-sm-12
-                        p Продемонстрируем допустимые и&nbsp;недопустимые варианты использования логотипа 
-                            | Для фирменных цветоы подберем цветовые значения RGB и #HEX для использования в web 
-                            | и значения CMYK и Pantone для печати. Пропишем, какую гарнитуру и размеры использовать 
-                            | для заголовков, слоганов, основных текстовых блоков и подписей поменьше.
-                            | Оформим до 6 фирменных предметов, которые важны для вашего бренда.
-                .service.mt-3
-                    .item.item_service.service__col.service__col--first
-                        .item__title фирменные носители
-                        .item_service__image.item_service__image--first(style="background-image:url('/demo/fullstack.png')")
-                    .item.item_service.service__col.mt-xs-1
-                        .item__title правила использования
-                        .item_service__image(style="background-image:url('/demo/small.png')")
-                    .item.item_service.service__col.mt-xs-1
-                        .item__title фирменные шрифты
-                        .item_service__image(style="background-image:url('/demo/small.png')")
-                    .item.item_service.service__col.mt-xs-1
-                        .item__title цветовая палитра
-                        .item_service__image(style="background-image:url('/demo/small.png')")
-                    .item.item_service.service__col.mt-xs-1
-                        .item__title элементы фирменного стиля
-                        .item_service__image(style="background-image:url('/demo/small.png')")                
-            //- Contact Form
+                        //- Contact Form
+                //- FAQ
+                .mt-5
+                    p.h4.text-white.mb-3.mb-lg-2 FAQ
+                    .faq
+                        .faq__title(data-toggle="true") Praesentium voluptatum deleniti atque corrupti, quos dolores eos
+                        .faq__content Temporibus autem vel illum, qui in culpa. Aut reiciendis voluptatibus maiores alias consequatur. Optio, cumque nihil impedit, quo minus. Reprehenderit, qui molestiae consequatur, vel eum iure reprehenderit. Neque porro quisquam est, omnis iste natus error sit voluptatem accusantium. Velit, sed ut aut officiis debitis aut rerum facilis est eligendi optio
+                    .faq.mt-2
+                        .faq__title.demo.de(data-toggle="true") Praesentium voluptatum deleniti atque corrupti, quos dolores eos
+                        .faq__content Temporibus autem vel illum, qui in culpa. Aut reiciendis voluptatibus maiores alias consequatur. Optio, cumque nihil impedit, quo minus. Reprehenderit, qui molestiae consequatur, vel eum iure reprehenderit. Neque porro quisquam est, omnis iste natus error sit voluptatem accusantium. Velit, sed ut aut officiis debitis aut rerum facilis est eligendi optio
             include component/form/formAside.pug
         include component/footer/footer.pug
         include component/form/formHidden.pug
