--- a/src/styles/framework/_framework.scss
+++ b/src/styles/framework/_framework.scss
@@ -15,28 +15,7 @@ html,body {
     box-sizing: inherit;
 }
 
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6{
-    font-family: $font-family-heading;
-    font-weight: $font-weight-heading;
-    line-height: $line-height-heading;
-    margin-bottom: map-get($spacers, 2);
-
-    &:last-child{
-        margin-bottom: 0;
-    }
-}
-* + h1, * + h2, * + h3, * + h4, * + h5, * + h6,
-* + .h1, * + .h2, * + .h3, * + .h4, * + .h5, * + .h6{
-    margin-top: map-get($spacers, 3);
-}
-.h1,h1{font-size: 48px;}
-.h2,h2{font-size: 40px;}
-.h3,h3{font-size: 32px;}
-.h4,h4{font-size: 24px;}
-.h5,h5{font-size: 18px;}
-.h6,h6{font-size: 1rem;}
-
+// Main Text
 p {
     font-size: 1rem;
     margin-top: 0;
@@ -45,6 +24,7 @@ p {
         margin-bottom: 0;
     }
 }
+// List
 ol, ul{
     padding: 0;
     margin-bottom: map-get($spacers, 2);
@@ -52,6 +32,7 @@ ol, ul{
         margin-bottom: 0;
     }
 }
+// Link
 a{
     display: inline-block;
     outline: none;
@@ -66,16 +47,18 @@ a{
 }
 .link-inverse{
     color: $link-hover-color;
+
     &:hover{
         color: $link-color;
     }
 }
-
+// Table
 table{
     td{
         padding: 8px 15px;
     }
 }
+// Background
 .bg-black{background-color: $black;}
 .bg-white{background-color: $white;}
 .bg-grey{background-color: $dark-grey;}
@@ -96,16 +79,12 @@ table{
     }
 }
 
+// Positions
 .p-relative{position: relative;}
 .p-sticky{position: sticky; top: 0; left: 0; z-index: 101;}
 .p-absolute{position: absolute; top: 0; left: 0; z-index: 101;}
 
-.d{
-    &-flex{display: flex;}
-    &-none{display: none;}
-    &-block{display: block;}
-}
-
+// Text Colors
 .text-white{color: $white;}
 .text-black{color: $black;}
 .text-green{color: $green;}
@@ -113,14 +92,24 @@ table{
 .text-light{color: $light-grey;}
 .text-grey{color: $grey;}
 
+// Text Styles
 .text-uppercase{text-transform: uppercase;}
 .text-bolder{font-weight: 500;}
 .text-bold,strong,b{font-weight: 700;}
 .text-underline{text-decoration: underline;}
 
+// Text Sizes
 .text-small,small,.small{font-size: 0.9rem;}
 .text-lead,.lead{font-size: 1.2rem;}
 
+// Text Positions
+.text{
+    &-right{text-align: right;}
+    &-center{text-align: center;}
+    &-left{text-align: left;}
+}
+
+// Dialog
 .text-dialog{
     position: relative;
     display: inline-block;
@@ -141,11 +130,7 @@ table{
     }
 }
 
-.text{
-    &-right{text-align: right;}
-    &-center{text-align: center;}
-    &-left{text-align: left;}
-}
+// Images
 .img-fluid{
     display: block;
     height: auto;
@@ -155,88 +140,45 @@ table{
 .img-border{
     border: 1px solid $border-color;
 }
-.border-block{
-    padding: map-get($map: $spacers, $key: 3);
-    border: 1px solid $border-color;
-}
+// .border-block{
+//     padding: map-get($map: $spacers, $key: 3);
+//     border: 1px solid $border-color;
+// }
 
-
+// < 1600px
 @media all and (max-width: map-get($grid-breakpoints, 'xl')){
-    html,body {
-        font-size: map-get($font-size, 'xl');   
-    }
-    .d-xl{
-        &-flex{display: flex;}
-        &-none{display: none;}
-        &-block{display: block;}
-    }
     .text-xl{
         &-left{text-align: left;}
         &-center{text-align: center;}
         &-right{text-align: right;}
     }
 }
+// < 1280px
 @media all and (max-width: map-get($grid-breakpoints, 'lg')){
-    // html,body {font-size: map-get($font-size, 'lg');}
-    
-    .d-lg{
-        &-flex{display: flex;}
-        &-none{display: none;}
-        &-block{display: block;}
-    }
-
     .text-lg{
         &-left{text-align: left;}
         &-center{text-align: center;}
         &-right{text-align: right;}
     }
 }
+// < 1024px
 @media all and (max-width: map-get($grid-breakpoints, 'md')){
-    // html,body {font-size: map-get($font-size, 'md');}
-
-    .d-md{
-        &-flex{display: flex;}
-        &-none{display: none;}
-        &-block{display: block;}
-    }
-    
     .text-md{
         &-left{text-align: left;}
         &-center{text-align: center;}
         &-right{text-align: right;}
     }
 }
+// < 768px
 @media all and (max-width: map-get($grid-breakpoints, 'sm')){
-    html,body {font-size: map-get($font-size, 'sm');}
-
-    .h1,h1{font-size: 32px;}
-    .h2,h2{font-size: 26px;}
-    .h3,h3{font-size: 22px;}
-    .h4,h4{font-size: 18px;}
-    .h5,h5{font-size: 16px;}
-    
-    .d-sm{
-        &-flex{display: flex;}
-        &-none{display: none;}
-        &-block{display: block;}
-    }
-
     .text-sm{
         &-left{text-align: left;}
         &-center{text-align: center;}
         &-right{text-align: right;}
     }
 }
+// < 576px
 @media all and (max-width: map-get($grid-breakpoints, 'xs')){
-    .border-block{
-        padding: $spacer/2;
-    }
-    .d-xs{
-        &-flex{display: flex;}
-        &-none{display: none;}
-        &-block{display: block;}
-    }
-
     .text-xs{
         &-left{text-align: left;}
         &-center{text-align: center;}
