--- a/src/styles/framework.scss
+++ b/src/styles/framework.scss
@@ -1,6 +1,6 @@
-@import "../styles/helpers/variables";
+@import "../styles/helpers/variable";
 @import "../styles/helpers/reboot";
-@import "../styles/helpers/font";
+@import "../styles/helpers/fonts";
 
 // Grid
 @import "../styles/grid/container";
