--- a/src/blocks/content/_content-main.scss
+++ b/src/blocks/content/_content-main.scss
@@ -1,29 +1,27 @@
 .content-main{
     position: relative;
     padding: map-get($map: $spacers, $key: 3);
-    // background-image: linear-gradient( $purple, $blue);
-    // border-radius: $spacer/2;
-    border: 1px solid $border-color;
+
+    border: 4px solid $white;
 
     &__title{
-        font-size: 82px;
-        text-indent: 160px;
+        font-size: 80px;
+        text-indent: 180px;
         max-width: 100%;
 
         &_secondary{
-            font-size: 42px;
+            font-size: map-get($map: $heading, $key: h2);
         }
     }
     &__subtitle{
-        // width: 120px;
-
         position: absolute;
         top: map-get($map: $spacers, $key: 3);
         left: map-get($map: $spacers, $key: 3);
 
+        // font-family: $font-family-heading;
         font-size: map-get($map: $font-size, $key: 'xs');
         text-align: right;
-        padding: 4px 6px;
+        padding: 4px 12px;
         border: 4px solid $green;
         color: $green;
         // transform: translateY(12px);
@@ -41,9 +39,8 @@
         }
     }
     &__intro{
-        width: 380px;
+        width: 420px;
         max-width: 90%;
-        color: $grey;
         margin-bottom: map-get($map: $spacers, $key: 2);
     }
     &__list{
@@ -60,42 +57,42 @@
         }
     }
 }
-@media all and (max-width: map-get($grid-breakpoints, 'lg')){
-    .content-main{
-        &__title{
-            font-size: 40px;
-        }
-        &__intro{
-            width: 440px;
-        }
-    }
-}
-@media all and (max-width: map-get($grid-breakpoints, 'md')){
-    .content-main{
-        &__title{
-            margin-top: $spacer/2;
-            font-size: 32px;
-        }
-    }
-}
-@media all and (max-width: map-get($grid-breakpoints, 'sm')){
-    .content-main{
-        &__title{
-            margin-top: map-get($map: $spacers, $key: 4);
-            text-indent: 0px;
-        }
-    }
-}
-@media all and (max-width: map-get($grid-breakpoints, 'xs')){
-    .content-main{
-        padding: $spacer/2;
-        &__title{
-            font-size: 20px;
-        }
-        &__subtitle{
-            font-size: 10px;
-            top: $spacer/2;
-            left: $spacer/2;
-        }
-    }
-}
+// @media all and (max-width: map-get($grid-breakpoints, 'lg')){
+//     .content-main{
+//         &__title{
+//             font-size: 40px;
+//         }
+//         &__intro{
+//             width: 440px;
+//         }
+//     }
+// }
+// @media all and (max-width: map-get($grid-breakpoints, 'md')){
+//     .content-main{
+//         &__title{
+//             margin-top: $spacer/2;
+//             font-size: 32px;
+//         }
+//     }
+// }
+// @media all and (max-width: map-get($grid-breakpoints, 'sm')){
+//     .content-main{
+//         &__title{
+//             margin-top: map-get($map: $spacers, $key: 4);
+//             text-indent: 0px;
+//         }
+//     }
+// }
+// @media all and (max-width: map-get($grid-breakpoints, 'xs')){
+//     .content-main{
+//         padding: $spacer/2;
+//         &__title{
+//             font-size: 20px;
+//         }
+//         &__subtitle{
+//             font-size: 10px;
+//             top: $spacer/2;
+//             left: $spacer/2;
+//         }
+//     }
+// }
