--- a/src/blocks/service/_service.scss
+++ b/src/blocks/service/_service.scss
@@ -1,22 +1,26 @@
 .service{
     display: grid;
-    grid-gap: $spacer/2;
+    grid-gap: map-get($map: $spacers, $key: 2);
+
     grid-template-columns: repeat(3, minmax(0, 1fr));
 
     &__col{
-        &--first{
-            grid-row-start: 1;
-            grid-row-end: 3;
-        }
+        display: flex;
+        align-items: stretch;
     }
 }
-@media all and (max-width: map-get($grid-breakpoints, 'md')){
-    .service{
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
+
+.service_index-page{
+    grid-template-columns: repeat(4, minmax(0, 1fr));
 }
-@media all and (max-width: map-get($grid-breakpoints, 'xs')){
-    .service{
-        display: block;
-    }
-}
+
+// @media all and (max-width: map-get($grid-breakpoints, 'md')){
+//     .service{
+//         grid-template-columns: repeat(2, minmax(0, 1fr));
+//     }
+// }
+// @media all and (max-width: map-get($grid-breakpoints, 'xs')){
+//     .service{
+//         display: block;
+//     }
+// }
