--- a/src/items/item/_item_link.scss
+++ b/src/items/item/_item_link.scss
@@ -1,10 +1,13 @@
 .item_link{
     display: block;
+    width: 100%;
+
     padding: $grid-gutter-width;
-    border: 1px solid $border-color;
+    border: 4px solid $white;
+    background-color: darken($color: $black, $amount: 4);
 
     &:hover, &:focus{
-        background-color: darken($color: $black, $amount: 4);
+        background-color: $black;
         text-decoration: none;
     }
 }
