--- a/src/styles/helpers/_fonts.scss
+++ b/src/styles/helpers/_fonts.scss
@@ -1,11 +1,11 @@
 // Theinhardt –––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––
-// @font-face 
-// {
-// 	font-family: "Theinhardt Pan";
-// 	font-weight: 300;
-// 	font-style: normal;
-// 	src:
-// 		url('../fonts/Theinhardt-Pan-Light.woff2') format('woff2'),
-// 		url('../fonts/Theinhardt-Pan-Light.woff') format('woff'),
-// 		url('../fonts/Theinhardt-Pan-Light.ttf') format('truetype');
-// }
+@font-face 
+{
+	font-family: "Kharkiv Tone";
+	font-weight: 800;
+	font-style: normal;
+	src:
+		url('../fonts/Kharkiv_Tone.woff2') format('woff2'),
+		url('../fonts/Kharkiv_Tone.woff') format('woff'),
+		url('../fonts/Kharkiv_Tone.ttf') format('truetype');
+}
