--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
-@import "../styles/helpers/variables";
+@import "../styles/helpers/variable";
 
 @import "../items/btn/btn";
+@import "../items/btn/btn_callback";
 @import "../items/btn/btn_action";
 @import "../items/btn/btn_secondary";
 
