--- a/src/blocks/header/_header.scss
+++ b/src/blocks/header/_header.scss
@@ -15,7 +15,7 @@
         flex-wrap: nowrap;
         align-items: center;
         padding: $spacer 0;
-        font-size: 11px;
+        font-size: map-get($map: $font-size, $key: xs);
     }
 
     &__email{
