--- a/src/items/item/_item.scss
+++ b/src/items/item/_item.scss
@@ -23,7 +23,7 @@
         width: 34px;
     }
     &__intro{
-        font-size: map-get($map: $font-size, $key: xs);
+        font-size: map-get($map: $font-size, $key: sm);
         color: $grey;
     }
     &__label {
