--- a/src/items/btn/_btn.scss
+++ b/src/items/btn/_btn.scss
@@ -5,6 +5,7 @@
 
     font-family: $font-family-heading;
     font-size: map-get($map: $font-size, $key: "md");
+    line-height: 1;
     font-weight: $font-weight-bold;
     
     letter-spacing: 1px;
@@ -20,7 +21,10 @@
     &--full{
         width: 100%;
     }
-    &--small{
-        padding: 8px 12px;
+}
+
+@media all and (max-width: map-get($grid-breakpoints, 'xl')){
+    .btn{
+        font-size: map-get($map: $font-size, $key: "sm");
     }
 }
