--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -116,4 +116,4 @@ block content
                         p.content-main__list настраивать удобную админку
                         p.content-main__list создавать лого, которые нравятся
         //- Contact Form
-        //- include component/form/formAside.pug
+        include ../blocks/content/content-form.pug
