--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,7 @@
   box-shadow: none;
   font-family: "Kharkiv Tone", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 16px;
+  line-height: 1;
   font-weight: 700;
   letter-spacing: 1px;
   background-color: inherit;
@@ -20,8 +21,10 @@
   width: 100%;
 }
 
-.btn--small {
-  padding: 8px 12px;
+@media all and (max-width: 1600px) {
+  .btn {
+    font-size: 14px;
+  }
 }
 
 .btn_callback {
@@ -52,6 +55,7 @@
   border: 4px solid #c1ea1d;
   color: #c1ea1d;
   text-align: center;
+  padding: 14px 28px;
 }
 
 .btn_action:hover, .btn_action:focus {
@@ -74,38 +78,49 @@
   background-color: inherit;
   color: #ffffff;
   border: 1px solid #3e3e3e;
-  padding: 13.33333px 20px;
-  margin-bottom: 13.33333px;
+  font-size: 16px;
+  line-height: 1;
+  padding: 15px 24px;
   -webkit-transition: .4s;
   -o-transition: .4s;
   transition: .4s;
 }
 
 .input::-webkit-input-placeholder {
+  font-size: 16px;
+  line-height: 1;
   -webkit-transition: .4s;
   transition: .4s;
   color: #b8b8b8;
 }
 
 .input::-moz-placeholder {
+  font-size: 16px;
+  line-height: 1;
   -moz-transition: .4s;
   transition: .4s;
   color: #b8b8b8;
 }
 
 .input:-ms-input-placeholder {
+  font-size: 16px;
+  line-height: 1;
   -ms-transition: .4s;
   transition: .4s;
   color: #b8b8b8;
 }
 
 .input::-ms-input-placeholder {
+  font-size: 16px;
+  line-height: 1;
   -ms-transition: .4s;
   transition: .4s;
   color: #b8b8b8;
 }
 
 .input::placeholder {
+  font-size: 16px;
+  line-height: 1;
   -webkit-transition: .4s;
   -o-transition: .4s;
   transition: .4s;
@@ -139,10 +154,6 @@
 
 .input--full {
   width: 100%;
-}
-
-.input--has-validation {
-  margin-bottom: 6.66667px;
 }
 
 .checkbox {
@@ -975,7 +986,7 @@
   -ms-flex-align: center;
   align-items: center;
   padding: 40px 0;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .header__email {
@@ -1070,7 +1081,8 @@
 .footer__link {
   display: block;
   color: #b8b8b8;
-  margin-bottom: 6.66667px;
+  line-height: 1.1;
+  margin-bottom: 10px;
 }
 
 @media all and (max-width: 576px) {
@@ -1176,6 +1188,9 @@
 
 .content-form__form {
   margin-top: 40px;
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .content-form__animation {
