--- a/src/items/btn/_btn_action.scss
+++ b/src/items/btn/_btn_action.scss
@@ -3,6 +3,8 @@
     color: $green;
     text-align: center;
 
+    padding: 14px 28px;
+
     &:hover, &:focus{
         background-color: darken($color: $black, $amount: 4);
         color: $green;
